--- a/domains/scholarshipacademy.uz/public_html/o-nas/index.html
+++ b/domains/scholarshipacademy.uz/public_html/o-nas/index.html
@@ -184,7 +184,7 @@
             <form action="/form.php" method="post" class="contact-form">
                 <label>
                     <span class="label">ФИО</span>
-                    <input type="text" name="name" placeholder="Введите Ваше имя" required>
+                    <input type="text" placeholder="Введите Ваше имя" id="input__footer" required>
                 </label>
                 <label>
                     <span class="label">Программа</span>
